<resources>
    <string name="app_name">DronedIN</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">803653680503001</string>
    <string name="fb_login_protocol_scheme">fb803653680503001</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s_standard_dummy_text_ever_since_the_1500s_when_an_unknown_printer_took_a_galley_of_type_and_scrambled_it_to_make_a_type_specimen_book_it_has_survived_not_only_five_centuries_but_also_the_leap_into_electronic_typesetting_remaining_essentially_unchanged_it_was_popularised_in_the_1960s_with_the_release_of_letraset_sheets_containing_lorem_ipsum_passages_and_more_recently_with_desktop_publishing_software_like_aldus_pagemaker_including_versions_of_lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="find_trusted_client">Find Trusted Client</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="accept_agreement">Accept Agreement</string>
    <string name="log_in">Log In</string>
    <string name="new_to_dronedin_sign_up">New to DronedIn? Join Now</string>
    <string name="already_have_an_account_log_in">Already have an account? Log In</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_n_password">Forgot\nPassword?</string>
    <string name="or_log_in_with">OR LOG IN WITH</string>
    <string name="or_sign_up_with">OR JOIN NOW WITH</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Join Now</string>
    <string name="by_logging_in_you_agree_with_the_terms_and_conditions_learn_more">By registering you agree to the terms and conditions. Learn more</string>
    <string name="verification">Verification</string>
    <string name="a_verification_email_has_been_sent_to_your_email">A verification email has been sent to your email %s</string>
    <string name="submit">Submit</string>
    <string name="didn_t_receive_the_code_resend">Didn’t receive the code? Resend</string>
    <string name="send">Send</string>
    <string name="type_your_email_here">Type your Email here</string>
    <string name="location">Location</string>
    <string name="identification_document">Identification Document</string>
    <string name="front_side">Front Side</string>
    <string name="back_side">Back Side</string>
    <string name="save">Save</string>
    <string name="add_picture">Add Picture</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="sometings_went_wrong">Somethings went wrong</string>
    <string name="cancel_request">Cancel request</string>
    <string name="type_location_here">Type Location Here</string>
    <string name="select_location">Select Location</string>
    <string name="jobs">Jobs</string>
    <string name="messages">Messages</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="start_finding_an_excellent_pilot">Start Finding an\namazing pilot!</string>
    <string name="hello">Hello %s,</string>
    <string name="post_new_job">Post new job</string>
    <string name="edit_job">Edit job</string>
    <string name="capital_posted">POSTED</string>
    <string name="capital_active">ACTIVE</string>
    <string name="capital_history">HISTORY</string>
    <string name="end_price_string">%s$</string>
    <string name="price_string">$%s</string>
    <string name="profile">Profile</string>
    <string name="payment_method">Payment Method</string>
    <string name="change_password">Change Password</string>
    <string name="membership">Membership</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="let_s_get_started">Let’s Get Started</string>
    <string name="what_do_you_want_to_join_as">What do you want to join as ?</string>
    <string name="as_pilot">As Pilot</string>
    <string name="as_client">As Client</string>
    <string name="online">Online</string>
    <string name="type_a_message">Type a message</string>
    <string name="my_jobs">My Jobs</string>
    <string name="filters">Filters</string>
    <string name="posted_by_">Posted By:</string>
    <string name="location_">Location:</string>
    <string name="budget_">Budget:</string>
    <string name="select_category">Select Category</string>
    <string name="select_skillset">Select SkillSet</string>
    <string name="select_equipments">Select Equipments</string>
    <string name="price_range">Price Range</string>
    <string name="price_range_value">$%s - $%s</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="filter_result">Filter Result</string>
    <string name="job_details">job Details</string>
    <string name="date_">Date:</string>
    <string name="milestone_details">Milestone Details</string>
    <string name="total_amount">Total Amount</string>
    <string name="attachments">Attachments</string>
    <string name="proposal_received">Proposal Received</string>
    <string name="interviewing">Interviewing</string>
    <string name="invitations_sent">Invitations Sent</string>
    <string name="send_proposal">Send Proposal</string>
    <string name="message">Message</string>
    <string name="active_jobs">Active Jobs</string>
    <string name="job_history">Job History</string>
    <string name="earnings">My Earnings</string>
    <string name="proposals">Proposals</string>
    <string name="invitations">Invitations</string>
    <string name="offers">Offers</string>
    <string name="offered_by_">Offered By:</string>
    <string name="offered_price_">Offered Price:</string>
    <string name="invited_by_">Invited By:</string>
    <string name="sent_to_">Sent To:</string>
    <string name="price_">Price:</string>
    <string name="offers_details">Offers Details</string>
    <string name="skills_and_equipments_preferred">Skills and Equipments ( Preferred )</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="client_name">Client Name:</string>
    <string name="active">Active</string>
    <string name="pending">Pending</string>
    <string name="completed">Completed</string>
    <string name="completed_on">Completed on:</string>
    <string name="cancelled">Cancelled</string>
    <string name="cancelled_on">Cancelled on:</string>
    <string name="started_on_">Started On:</string>
    <string name="proposal_details">Proposal Details</string>
    <string name="proposal_details_small">Proposal details</string>
    <string name="submitted_to">Submitted To:</string>
    <string name="withdraw_proposal">Withdraw Proposal</string>
    <string name="invitation_details">Invitation Details</string>
    <string name="submit_proposal">Submit Proposal</string>
    <string name="write_a_short_title_here">Write a short title here.</string>
    <string name="describe_your_proposal_here">Describe your proposal here.</string>
    <string name="title">Title</string>
    <string name="details">Details</string>
    <string name="create_milestones">Create Milestones</string>
    <string name="price">Price</string>
    <string name="enter_price">Enter price.</string>
    <string name="total_amount_">Total Amount:</string>
    <string name="attach_files">Attach Files</string>
    <string name="contact">Contact</string>
    <string name="account_details">Account Details</string>
    <string name="identity_document_front">Identity document - Front</string>
    <string name="account_holder_first_name">Account Holder First Name</string>
    <string name="account_holder_last_name">Account Holder Last Name</string>
    <string name="bank_account_number_format">*****%s</string>
    <string name="add_bank_account">Add Bank Account</string>
    <string name="routing_number">BSB Number</string>
    <string name="bank_account_number">Bank Account Number</string>
    <string name="birth_date">Birth Date</string>
    <string name="let_s_know_you_more">Let’s Know You More !</string>
    <string name="bio">Bio</string>
    <string name="tell_us_more_about_you">Tell us more about you !</string>
    <string name="skill_set">Skill Set</string>
    <string name="pick_skills_that_describes_you_well">(Pick skills that describes you well!)</string>
    <string name="equipments">Equipments</string>
    <string name="select_the_equipments_you_have">(Select the equipments you have)</string>
    <string name="yes">Yes</string>
    <string name="logging_out">Logging out!</string>
    <string name="are_you_sure_about_it">Are you sure about it?</string>
    <string name="yes_logout">Yes, logout</string>
    <string name="card_details">Card Details</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="example_john_bolt">Example: John Bolt</string>
    <string name="card_number">Card Number</string>
    <string name="card_number_string">****%s</string>
    <string name="expiry_date_string">Expiry Date: %s/%s</string>
    <string name="xxxx_xxxx_xxxx_xxxx">XXXX - XXXX - XXXX - XXXX</string>
    <string name="expires">Expires</string>
    <string name="cvv_cvc">CVV</string>
    <string name="skills_and_equipments">Skills and Equipments</string>
    <string name="reviews">Reviews</string>
    <string name="view_all">View All</string>
    <string name="view">View</string>
    <string name="invite">Invite</string>
    <string name="proposal_received_">Proposal Received:</string>
    <string name="invitations_sent_">Invitations Sent:</string>
    <string name="pilot_">Pilot:</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="see_list">See List</string>
    <string name="submitted_by">Submitted By:</string>
    <string name="hire">Hire</string>
    <string name="chat">Chat</string>
    <string name="offered_to">Offered To:</string>
    <string name="sent_by">Sent By:</string>
    <string name="withdraw_offer">Withdraw Offer</string>
    <string name="saved_pilots">Saved Pilots</string>
    <string name="saved_jobs">Saved Jobs</string>
    <string name="sent_invitations">Sent Invitations</string>
    <string name="sent_offers">Sent Offers</string>
    <string name="total_price_">Total Price:</string>
    <string name="milestones">Milestones</string>
    <string name="description">Description</string>
    <string name="customer_support">Customer Support</string>
    <string name="old_password">Old Password</string>
    <string name="type_old_password_here">Type old password here</string>
    <string name="type_new_password_here">Type new password here</string>
    <string name="new_password">New Password</string>
    <string name="re_enter_password_here">Re-Enter password here</string>
    <string name="enter_title_here">Enter title here</string>
    <string name="enter_brief_description_here">Enter brief description here</string>
</resources>