<?xml version="1.0" encoding="utf-8"?>


<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".signin.SignInActivity">

        <ImageView
            android:id="@+id/im_back"
            android:layout_width="@dimen/_48dp"
            android:layout_height="@dimen/_48dp"
            android:layout_marginStart="@dimen/_15dp"
            android:layout_marginTop="@dimen/_15dp"
            android:background="?selectableItemBackground"
            android:padding="@dimen/_10dp"
            android:src="@drawable/ic_back_blue" />

        <com.grewon.dronedin.helper.AspectImageView
            android:id="@+id/top_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_15dp"
            android:src="@drawable/ic_change_password"
            app:aspectRatio="0.5"
            app:aspectRatioEnabled="true" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/top_image"
            android:layout_marginTop="-40dp"
            android:background="@drawable/ic_intro_bottom"
            android:orientation="vertical"
            android:padding="@dimen/_25dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_70dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="@dimen/_2dp"
                android:text="@string/change_password"
                android:textAppearance="@style/BoldTextAppearance"
                android:textColor="@color/white"
                android:textSize="@dimen/_24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25dp"
                android:text="@string/old_password"
                android:textAppearance="@style/RobotoMediumTextAppearance"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sp" />


            <EditText
                android:id="@+id/edt_old_password"
                style="@style/editTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:background="@drawable/ic_rectangle_light_colorprimary"
                android:gravity="start"
                android:textCursorDrawable="@drawable/white_cursor"
                android:hint="@string/type_old_password_here"
                android:inputType="textPassword"
                android:padding="@dimen/_15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/gray_b1" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20dp"
                android:text="@string/new_password"
                android:textAppearance="@style/RobotoMediumTextAppearance"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sp" />

            <EditText
                android:id="@+id/edt_new_password"
                style="@style/editTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:background="@drawable/ic_rectangle_light_colorprimary"
                android:gravity="start"
                android:hint="@string/type_new_password_here"
                android:inputType="textPassword"
                android:padding="@dimen/_15dp"
                android:textCursorDrawable="@drawable/white_cursor"
                android:textColor="@color/white"
                android:textColorHint="@color/gray_b1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20dp"
                android:text="@string/confirm_password"
                android:textAppearance="@style/RobotoMediumTextAppearance"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sp" />

            <EditText
                android:id="@+id/edt_confirm_password"
                style="@style/editTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:textCursorDrawable="@drawable/white_cursor"
                android:background="@drawable/ic_rectangle_light_colorprimary"
                android:gravity="start"
                android:hint="@string/re_enter_password_here"
                android:inputType="textPassword"
                android:padding="@dimen/_15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/gray_b1" />

            <TextView
                android:id="@+id/txt_save"
                android:layout_width="@dimen/_200dp"
                android:layout_height="@dimen/_45dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_40dp"
                android:background="@drawable/ic_rectangle"
                android:gravity="center"
                android:text="@string/save"
                android:textAppearance="@style/BoldTextAppearance"
                android:textColor="@drawable/white_text_selector"
                android:textSize="@dimen/_20sp" />


        </LinearLayout>
    </RelativeLayout>
</androidx.core.widget.NestedScrollView>

