<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:background="@drawable/map_bottom"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingStart="@dimen/_20dp"
        android:paddingEnd="@dimen/_20dp"
        android:paddingBottom="@dimen/_30dp">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAppearance="@style/BoldTextAppearance"
                android:textColor="@color/white"
                android:textSize="@dimen/_24sp" />

            <com.grewon.dronedin.helper.AspectImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-35dp"
                android:src="@drawable/ic_splash"
                app:aspectRatio="0.55"
                app:aspectRatioEnabled="true" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/logging_out"
            android:textAppearance="@style/BoldTextAppearance"
            android:textColor="@color/white"
            android:textSize="@dimen/_24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/_5dp"
            android:text="@string/are_you_sure_about_it"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/txt_cancel"
                android:layout_width="0dp"
                android:layout_height="@dimen/_45dp"
                android:layout_marginEnd="@dimen/_10dp"
                android:layout_weight="1"
                android:background="@drawable/ic_border_rectangle_spann_color"
                android:gravity="center"
                android:text="@string/cancel"
                android:textAppearance="@style/MediumTextAppearance"
                android:textColor="@drawable/white_text_selector"
                android:textSize="@dimen/_18sp" />

            <TextView
                android:id="@+id/txt_logout"
                android:layout_width="0dp"
                android:layout_height="@dimen/_45dp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_10dp"
                android:layout_weight="1"
                android:background="@drawable/ic_border_rectangle_gray_color"
                android:gravity="center"
                android:text="@string/yes_logout"
                android:textAppearance="@style/MediumTextAppearance"
                android:textColor="@drawable/white_text_selector"
                android:textSize="@dimen/_18sp" />

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>